Project initial structure created

--- a/CrazyPost/appsettings.json
+++ b/CrazyPost/appsettings.json
@@ -11,5 +11,8 @@
         "Default": "Warning"
       }
     }
+  },
+  "ConnectionStrings": {
+    "CrazyPostContext": "Server=(localdb)\\MSSQLLocalDB;Database=CrazyPostDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
