DataBase Seeding added to Program.cs as it is convenient with .net core 2

--- a/CrazyPost/appsettings.json
+++ b/CrazyPost/appsettings.json
@@ -13,6 +13,6 @@
     }
   },
   "ConnectionStrings": {
-    "CrazyPostContext": "Server=(localdb)\\MSSQLLocalDB;Database=CrazyPostDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ApiDbContext": "Server=(localdb)\\MSSQLLocalDB;Database=CrazyPostDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
