git structure changes

--- a/test/CrazyPost.Test.csproj
+++ b/test/CrazyPost.Test.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CrazyPost\CrazyPost.csproj" />
+    <ProjectReference Include="..\src\CrazyPost.csproj" />
   </ItemGroup>
 
 </Project>
